[package]
name = "txgithub"
version = "0.1.0"
edition = "2021"
authors = ["Raphaël Thériault <self@raftar.io>"]

[dependencies]
axum = { version = "0.6.18", features = [
    "http1",
    "query",
    "tokio",
    "tracing",
], default-features = false }
envy = "0.4.2"
fontdue = "0.7.3"
image = { version = "0.24.6", features = ["png"], default-features = false }
once_cell = "1.17.1"
rangemap = "1.3.0"
reqwest = { version = "0.11.17", features = [
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
syntect = { version = "5.0.0", features = [
    "dump-load",
    "parsing",
    "regex-onig",
], default-features = false }
tokio = { version = "1.28.1", features = ["net", "rt", "signal", "sync"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
bat = { version = "0.23.0", default-features = false }
quote = { version = "1.0.27", default-features = false }
syntect = { version = "5.0.0", features = [
    "dump-create",
    "plist-load",
    "regex-onig",
], default-features = false }
